kubernetes/prod/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend

  labels:
    app: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: hsbc
    environment: prod

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
